# MayaFileCleaner

./: .gitignore  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  cleaner_script.py  tauri.conf.json  utils.py
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/scripts/: maya_cleaner.py
