[package]
name = "maya-file-cleaner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maya_file_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"  


[package.metadata.bundle]
identifier = "com.maya-file-cleaner.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
resources = ["utils.py"]

# Add this section to hide the console window
[package.metadata.tauri.windows.windows]
visible = false

# This is important! For Windows, we need to specify the subsystem as Windows
[target.'cfg(windows)'.package.metadata.tauri.bundle]
windows.wix.language = "en-US"


# This sets the Windows subsystem to "windows" (GUI) instead of "console"
# This will hide the console window
[[bin]]
name = "maya-file-cleaner"
path = "src/main.rs"
